--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "nodemon src/server.ts",
     "build": "tsc -p ."
   },
@@ -25,14 +28,20 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.38",
     "@types/validator": "^13.7.3",
+    "babel-jest": "^28.1.3",
+    "jest": "^28.1.3",
+    "test-jest": "^1.0.1",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
