--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
     "test-jest": "^1.0.1",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.4"
   }
 }
