--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.38",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.3",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
