--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "dev": "nodemon src/server.ts",
     "build": "tsc -p ."
@@ -23,8 +23,10 @@
     "google-auth-library": "^8.1.0",
     "googleapis": "^105.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.8.0",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
+    "tape": "^5.5.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -35,10 +37,12 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.38",
     "@types/supertest": "^2.0.12",
+    "@types/tape": "^4.13.2",
     "@types/validator": "^13.7.3",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
